@@ -3,10 +3,11 @@ plugins {
   id 'application'
   id 'org.javamodularity.moduleplugin' version '1.8.12'
   id 'org.openjfx.javafxplugin' version '0.0.13'
+  id 'org.beryx.jlink' version '2.26.0'
 }
 
 group 'com.example'
-version '1.0-SNAPSHOT'
+version '1.1'
 
 repositories {
   mavenCentral()
@@ -31,7 +32,19 @@ javafx {
 
 dependencies {
   implementation 'org.openjfx:javafx-controls:17.0.6'
+  implementation 'org.openjfx:javafx-graphics:17.0.6'
+  implementation 'org.openjfx:javafx-base:17.0.6'
 }
 
 
+jlink {
+  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
 
+  jpackage {
+    imageOptions = ['--icon', 'src/main/resources/images/app_icon.ico']
+    installerOptions = ['--description', 'Chess Engine Game']
+    installerType = 'exe'
+    jvmArgs = ['--add-modules', javafx.modules.join(',')]
+    imageOptions = ['--win-console']
+  }
+}
